# planning_mode_eval

./: .env.example  .gitignore  README.md  analysis_results.ipynb  config.yaml  pyproject.toml  requirements.txt
data/: repomix-output-compressed.xml  repomix-output.xml  repomix_stdout.xml
data/test_run/: scores.json  tasks.json
data/test_run/plans/task_001/: plan_raw.txt
data/test_run/plans/task_002/: plan.md  plan_raw.txt
prompts/: claim_extract.txt  judge_gt_match.txt  judge_style.txt  task_gen.txt
src/: __init__.py  config.py  logging_utils.py  run_pipeline.py
src/contextizer/: __init__.py  clone.py  repomix.py
src/grading/: __init__.py  aggregate.py  claims.py  ground_truth_metrics.py  text_quality.py  verify_search.py
src/runner/: __init__.py  run_plan.py
src/task_gen/: __init__.py  git_extract.py  ground_truth.py  llm_prompt.py
tests/: __init__.py  example_search.json  run_search_api_check.py  test_ground_truth.py
